background and preview

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="landing">
         <div>
           <h1 class="title">Aleo Wallet</h1>
-          <h2 class="subtitle">A private wallet for a private network. A safe and easy way to interact with the Aleo blockchain.</h2>
+          <h2 class="subtitle">The ultimate wallet for private applications.</h2>
           <button href="https://chrome.google.com/webstore/detail/aleo-wallet/gnebojbimjelkmlfifljmilecfnonhnc" target="_blank" class="btn-light">Try our wallet!</button>
         </div>
         <!-- main Atropos container (required), add your custom class here -->
@@ -36,7 +36,7 @@
               <!-- inner container (required) -->
               <div class="atropos-inner rounded-2xl">
                 <!-- put your custom content here -->
-                <img src="/images/phone.png" />
+                <img src="/images/preview.png" />
               </div>
             </div>
           </div>
