--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <body>
     <header>
       <nav>
-        <img class="w-52" src="images/aleowallet-logo.svg" />
+        <img class="logo" src="images/aleowallet-logo.svg" />
+        <img class="menu stroke-white" src="images/hamburger.svg" />
         <ul class="nav-options">
           <a href="https://twitter.com/AleoWallet" target="_blank"><li>Twitter</li></a>
           <a href="https://discord.gg/n6v7Pfczuy" target="_blank"><li>Discord</li></a>
@@ -25,10 +26,10 @@
         <div>
           <h1 class="title">Aleo Wallet</h1>
           <h2 class="subtitle">The ultimate wallet for private applications.</h2>
-          <button href="https://chrome.google.com/webstore/detail/aleo-wallet/gnebojbimjelkmlfifljmilecfnonhnc" target="_blank" class="btn-light">Try our wallet!</button>
+          <button href="https://chrome.google.com/webstore/detail/aleo-wallet/gnebojbimjelkmlfifljmilecfnonhnc" target="_blank" class="btn-light download-btn"></button>
         </div>
         <!-- main Atropos container (required), add your custom class here -->
-        <div class="atropos my-atropos">
+        <div class="atropos my-atropos pointer-events-none lg:pointer-events-auto">
           <!-- scale container (required) -->
           <div class="atropos-scale">
             <!-- rotate container (required) -->
