--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <p>IOS</p>
           </div>
         </div>
-        <button class="btn-light">Join the waitlist!</button>
+        <a class="btn-light" href="https://3msccbdt99m.typeform.com/to/GHZ2ZZ7t" target="_blank">Join the waitlist!</a>
       </div>
       <!-- <div class="flex flex-col justify-center items-center gap-10 my-20">
         <h2>Features</h2>
