--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         <div>
           <h1 class="title">The ultimate wallet for private applications.</h1>
           <p class="subtitle">The official wallet for aleo testnet3.</p>
-          <button href="https://chrome.google.com/webstore/detail/aleo-wallet/gnebojbimjelkmlfifljmilecfnonhnc" target="_blank" class="btn-light download-btn"></button>
+          <a href="https://chrome.google.com/webstore/detail/aleo-wallet/gnebojbimjelkmlfifljmilecfnonhnc" target="_blank" class="btn-light download-btn"></a>
         </div>
         <div class="atropos my-atropos pointer-events-none lg:pointer-events-auto">
           <div class="atropos-scale">
             <div class="atropos-rotate">
               <div class="atropos-inner rounded-2xl">
-                <img src="/images/preview.png" />
+                <img src="images/preview.png" />
               </div>
             </div>
           </div>
@@ -43,19 +43,19 @@
         <h2>Coming soon!</h2>
         <div class="soon">
           <div>
-            <img src="/images/safari.svg" alt="Safari logo" />
+            <img src="images/safari.svg" alt="Safari logo" />
             <p>Safari</p>
           </div>
           <div>
-            <img src="/images/firefox.svg" alt="Firefox logo" />
+            <img src="images/firefox.svg" alt="Firefox logo" />
             <p>Firefox</p>
           </div>
           <div>
-            <img src="/images/google-play.svg" alt="Google Play" />
+            <img src="images/google-play.svg" alt="Google Play" />
             <p>Android</p>
           </div>
           <div>
-            <img src="/images/ios.svg" alt="IOS" />
+            <img src="images/ios.svg" alt="IOS" />
             <p>IOS</p>
           </div>
         </div>
@@ -114,7 +114,7 @@
       </div> -->
     </main>
     <footer>2022 © Aleo Wallet</footer>
-    <script type="module" src="./js/atropos.min.js"></script>
-    <script type="module" src="./js/main.js"></script>
+    <script src="js/atropos.min.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
