--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <header>
       <nav>
-        <img class="logo" src="images/aleowallet-logo.svg" />
+        <img class="logo" src="images/aleowallet-logo.png" />
         <img class="menu-trigger stroke-white" src="images/hamburger.svg" />
         <ul class="nav-options hide-menu">
           <li class="border-b border-b-aleo-light py-3 text-2xl lg:hidden px-10">Aleo Wallet</li>
