--- a/index.html
+++ b/index.html
@@ -61,57 +61,43 @@
         </div>
         <a class="btn-light" href="https://3msccbdt99m.typeform.com/to/GHZ2ZZ7t" target="_blank">Join the waitlist!</a>
       </div>
-      <!-- <div class="flex flex-col justify-center items-center gap-10 my-20">
+      <div class="flex flex-col justify-center items-center gap-10 my-20">
         <h2>Features</h2>
         <div class="features relative">
-          <div>video</div>
+          <div><img class="hidden lg:block wallet rounded-xl max-h-[100%] absolute top-0 left-0 transform -translate-x-1/2" src="images/wallet.png" /></div>
           <div>
             <div class="feature">
               <p>Transfer system</p>
-              <video class="opacity-0" autoplay muted loop>
-                <source src="images/wallet.mp4" type="video/mp4" />
-                Your browser does not support the video tag.
-              </video>
+              <img class="preview opacity-0" src="images/send.png" />
             </div>
             <div class="feature">
-              <p>Transaction History</p>
-              <video class="opacity-0" autoplay muted loop>
-                <source src="images/transfer.mp4" type="video/mp4" />
+              <p>Multiple Account Management</p>
+              <video class="preview opacity-0" autoplay muted loop>
+                <source src="images/multiple-accounts.mp4" type="video/mp4" />
                 Your browser does not support the video tag.
               </video>
             </div>
-
             <div class="feature">
               <p>Explorer integration</p>
-              <video class="opacity-0" autoplay muted loop>
-                <source src="images/feature.mp4" type="video/mp4" />
-                Your browser does not support the video tag.
-              </video>
+              <img class="preview opacity-0" src="images/explorer.png" />
             </div>
             <div class="feature">
               <p>Account Generator</p>
-              <video class="opacity-0" autoplay muted loop>
-                <source src="images/feature.mp4" type="video/mp4" />
+              <video class="preview opacity-0" autoplay muted loop>
+                <source src="images/create.mp4" type="video/mp4" />
                 Your browser does not support the video tag.
               </video>
             </div>
             <div class="feature">
               <p>Import Account</p>
-              <video class="opacity-0" autoplay muted loop>
-                <source src="images/feature.mp4" type="video/mp4" />
-                Your browser does not support the video tag.
-              </video>
-            </div>
-            <div class="feature">
-              <p>Multiple Account Management</p>
-              <video class="opacity-0" autoplay muted loop>
-                <source src="images/feature.mp4" type="video/mp4" />
+              <video class="preview opacity-0" autoplay muted loop>
+                <source src="images/import.mp4" type="video/mp4" />
                 Your browser does not support the video tag.
               </video>
             </div>
           </div>
         </div>
-      </div> -->
+      </div>
     </main>
     <footer>2022 © Aleo Wallet</footer>
     <script src="js/atropos.min.js"></script>
