--- a/index.html
+++ b/index.html
@@ -61,40 +61,38 @@
         </div>
         <a class="btn-light" href="https://3msccbdt99m.typeform.com/to/GHZ2ZZ7t" target="_blank">Join the waitlist!</a>
       </div>
-      <div class="flex flex-col justify-center items-center gap-10 my-20">
-        <h2>Features</h2>
-        <div class="features relative">
-          <div><img class="hidden lg:block wallet rounded-xl max-h-[100%] absolute top-0 left-0 transform -translate-x-1/2" src="images/wallet.png" /></div>
-          <div>
-            <div class="feature">
-              <p>Transfer system</p>
-              <img class="preview opacity-0" src="images/send.png" />
-            </div>
-            <div class="feature">
-              <p>Multiple Account Management</p>
-              <video class="preview opacity-0" autoplay muted loop>
-                <source src="images/multiple-accounts.mp4" type="video/mp4" />
-                Your browser does not support the video tag.
-              </video>
-            </div>
-            <div class="feature">
-              <p>Explorer integration</p>
-              <img class="preview opacity-0" src="images/explorer.png" />
-            </div>
-            <div class="feature">
-              <p>Account Generator</p>
-              <video class="preview opacity-0" autoplay muted loop>
-                <source src="images/create.mp4" type="video/mp4" />
-                Your browser does not support the video tag.
-              </video>
-            </div>
-            <div class="feature">
-              <p>Import Account</p>
-              <video class="preview opacity-0" autoplay muted loop>
-                <source src="images/import.mp4" type="video/mp4" />
-                Your browser does not support the video tag.
-              </video>
-            </div>
+      <div class="features relative">
+        <div></div>
+        <div>
+          <h3 class="my-5">Features</h3>
+          <div class="feature selected">
+            Transfer system
+            <img class="preview" src="images/send.png" />
+          </div>
+          <div class="feature">
+            Multiple Account Management
+            <video class="preview" autoplay muted loop>
+              <source src="images/multiple-accounts.mp4" type="video/mp4" />
+              Your browser does not support the video tag.
+            </video>
+          </div>
+          <div class="feature">
+            Explorer integration
+            <img class="preview" src="images/explorer.png" />
+          </div>
+          <div class="feature">
+            Account Generator
+            <video class="preview" autoplay muted loop>
+              <source src="images/create.mp4" type="video/mp4" />
+              Your browser does not support the video tag.
+            </video>
+          </div>
+          <div class="feature">
+            Import Account
+            <video class="preview" autoplay muted loop>
+              <source src="images/import.mp4" type="video/mp4" />
+              Your browser does not support the video tag.
+            </video>
           </div>
         </div>
       </div>
